[package]
name = "trackplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polymod = { path = "../polymod" }
mixr = { path = "../../mixr" }
sdl2 = { version = "0.35.2", features = ["bundled"] }
ctrlc = "3.2.4"
clap = { version = "4.0.32", features = ["derive"] }
crossterm = "0.26.1"
